robot face has been roughly put together, just have to add teeth, and change the shapes to work for the face.

--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -25,7 +25,7 @@
         <div class="robot-eye-left"></div>
         <div class="robot-eye-right"></div>
         <div class="robot-nose"></div>
-        <div class="robot-teeth">
+        <div class="robot-mouth">
           <div class="robot-tooth"></div>
           <div class="robot-tooth"></div>
           <div class="robot-tooth"></div>
