Add Rosie-style doily hair to robot

--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -48,6 +48,7 @@
         <div class="robot-hair-three"></div>
         <div class="robot-hair-two"></div>
         <div class="robot-hair-one"></div>
+        <div class="doily-bow"></div>
       </div>
     </div>
   </body>
