--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -26,22 +26,20 @@
         <div class="robot-eye-right"></div>
         <div class="robot-nose"></div>
         <div class="robot-mouth">
+          <div class="mouth-flap"></div>
           <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
+          <div class="robot-tooth1"></div>
+          <div class="robot-tooth2"></div>
+          <div class="robot-tooth3"></div>
+          <div class="robot-tooth4"></div>
+          <div class="robot-tooth5"></div>
+          <div class="robot-tooth6"></div>
+          <div class="robot-tooth7"></div>
+          </div>
+          <div class="robot-ear-left"></div>
+          <div class="robot-ear-right"></div> 
         </div>
       </div>
-      <div class="robot-ear-left"></div>
-      <div class="robot-ear-right"></div>
       <div class="robot-hair-style">
         <div class="robot-hair-one"></div>
         <div class="robot-hair-two"></div>
