--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -38,16 +38,17 @@
           </div>
           <div class="robot-ear-left"></div>
           <div class="robot-ear-right"></div> 
+           <div class="robot-hair-style">
+            <div class="robot-hair-one"></div>
+            <div class="robot-hair-two"></div>
+            <div class="robot-hair-three"></div>
+            <div class="robot-hair-two"></div>
+ -->            <div class="doily-bow"></div>
+            </div>
         </div>
+        
       </div>
-      <div class="robot-hair-style">
-        <div class="robot-hair-one"></div>
-        <div class="robot-hair-two"></div>
-        <div class="robot-hair-three"></div>
-        <div class="robot-hair-two"></div>
-        <div class="robot-hair-one"></div>
-        <div class="doily-bow"></div>
-      </div>
+     
     </div>
   </body>
 </html>
